2009-01-16  Chris Fleizach  <cfleizach@apple.com>

        Reviewed by Beth Dakin.

        Add AX methods to retrieve the parent of an element.

        * DumpRenderTree/AccessibilityUIElement.cpp:
        (parentElementCallback):
        (AccessibilityUIElement::getJSClass):
        * DumpRenderTree/AccessibilityUIElement.h:
        * DumpRenderTree/mac/AccessibilityUIElementMac.mm:
        (AccessibilityUIElement::parentElement):
        * DumpRenderTree/win/AccessibilityUIElementWin.cpp:
        (AccessibilityUIElement::parentElement):

2009-01-16  Anders Carlsson  <andersca@apple.com>

        Reviewed by Adam Roben.

        Set the count to the right number of elements.
        
        * DumpRenderTree/TestNetscapePlugIn.subproj/TestObject.cpp:
        (testEnumerate):

2009-01-14  David Kilzer  <ddkilzer@apple.com>

        BUILD FIX: Use COM API on Windows in LayoutTestController::setIconDatabaseEnabled()

        Rubber-stamped by Alice Liu.

        * DumpRenderTree/win/LayoutTestControllerWin.cpp:
        (LayoutTestController::setIconDatabaseEnabled): Use COM API
        to get the shared WebIconDatabase.

2009-01-14  Jeremy Moskovich  <jeremy@chromium.org>

        Reviewed by Eric Seidel.

        <https://bugs.webkit.org/show_bug.cgi?id=16829>
        Implement NPN_SetException()

        * DumpRenderTree/TestNetscapePlugIn.subproj/PluginObject.cpp:
        (pluginInvoke):
        * DumpRenderTree/TestNetscapePlugIn.subproj/TestObject.cpp:
        (initializeIdentifiers):
        (testHasMethod):
        (testInvoke):

2009-01-13  Dmitry Titov  <dimich@chromium.org>

        Reviewed by David Kilzer.

        https://bugs.webkit.org/show_bug.cgi?id=23304
        Fix svn-apply to match svn-unapply to recognize added files in 'git diff' patches.

        * Scripts/svn-apply: Added a check (similar to svn-unapply) to recognize added files.

2009-01-14  David Kilzer  <ddkilzer@apple.com>
